# RAB-Builder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/migrations/: 001_init.sql
pages/: Upload_page.py
prompts/: rab_generation.md  vision_instruction.md
scripts/: check_api.py  init_db.py
src/: config.py  db.py  models.py
src/services/: llm_client.py  rab.py  vision.py
tests/: db_test.py  rab_test.py  test.py
